# cargo-check-filter

./: .analyzer.toml  .gitignore  AGENTS.md  Cargo.toml  LISENSE  QWEN.md  README.md  README_zh.md  analysis_report.md  analyze_cargo.py  analyze_cargo.rs  analyze_cargo_errors.py  cargo_errors_report.md  fix_imports.py  lib.rs
docs/: architecture-design.md  cargo-test-analysis-design.md  cargo-workspace-support-design.md  config-loading-logic.md  config-module-overview.md  configuration-system-design.md  cpp-support-design.md  detection-logic-analysis.md
docs/FAQ/: pnpm-turbo-configuration.md
docs/archive/: unused-code-reference.md
skill/analyzer-usage/: SKILL.md
skill/analyzer-usage/assets/: custom-commands.toml  full-config.toml  minimal-config.toml  monorepo-config.toml  tech-stack-config.toml
skill/analyzer-usage/references/: cargo-options.md  configuration-guide.md  report-formats.md
skills/analyzer-usage/: SKILL.md
src/: lib.rs  main.rs
src/core/: analyzer.rs  base_analyzer.rs  command.rs  config.rs  mod.rs  parser.rs  reporter.rs  test_analyzer.rs  types.rs
src/core/reporter/: html.rs  json.rs  markdown.rs  mod.rs
src/plugins/: mod.rs
src/plugins/cargo/: analyzer.rs  mod.rs  parser.rs
src/plugins/cpp/: mod.rs  parser.rs
src/plugins/go/: analyzer.rs  mod.rs  parser.rs
src/plugins/gradle/: analyzer.rs
test/fixtures/python-project/: pyproject.toml  requirements.txt  setup.py
test/output/: mypy_specific_file.txt  npm_audit.txt  npm_eslint.txt  npm_eslint_sample.txt  npm_ls.txt  npm_typecheck.txt
tests/: cmake_parser_tests.rs  cmake_real_integration_tests.rs  command_execution_tests.rs  config_integration_tests.rs  cpp_integration_tests.rs  cpp_parser_tests.rs  go_integration_tests.rs  gradle_integration_tests.rs  maven_integration_tests.rs  mypy_integration_tests.rs  npm_command_conversion_tests.rs  npm_error_handling_tests.rs  npm_integration_tests.rs  parser_integration_tests.rs  pytest_integration_tests.rs  turbo_tui_integration_tests.rs
tests/common/: mod.rs  vs_env.rs
tests/data/: last_output.txt  last_processed.txt
tests/data/fixtures/cpp-cmake-project/: CMakeLists.txt
tests/data/fixtures/cpp-cmake-project/include/: math.h
tests/data/fixtures/cpp-cmake-project/src/: main.cpp  math.cpp  utils.cpp
(+149 files in other folders)
