[package]
name = "analyzer"
version = "0.2.0"
edition = "2021"
description = "Multi-language build tool error analyzer"

[dependencies]
regex = "1.10"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "analyzer"
path = "src/main.rs"
