[package]
name = "analyzer"
version = "0.2.0"
edition = "2021"
description = "Multi-language build tool error analyzer"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "analyzer"
path = "src/main.rs"
